Chutes and ladders being set - need to optimize and clean up code

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "A fun game to teach the various techniques of programming",
   "main": "main.ts",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "coverage": "jest --coverage=true"
   },
   "keywords": [],
   "author": "Ryan McGuinness",
