--- a/package.json
+++ b/package.json
@@ -3,22 +3,18 @@
   "version": "1.0.0",
   "type": "module",
   "description": "A fun game to teach the various techniques of programming",
-  "main": "main.ts",
+  "main": "main.js",
   "scripts": {
     "test": "jest",
     "coverage": "jest --coverage=true"
   },
   "keywords": [],
-  "author": "Ryan McGuinness",
+  "author": "Josilyn McGuinness",
   "license": "Apache-2.0",
   "devDependencies": {
     "@babel/core": "^7.22.20",
     "@babel/preset-env": "^7.22.20",
-    "@babel/preset-typescript": "^7.22.15",
-    "@types/jest": "^29.5.5",
-    "@types/node": "^20.6.2",
     "babel-jest": "^29.7.0",
-    "jest": "^29.7.0",
-    "typescript": "^5.2.2"
+    "jest": "^29.7.0"
   }
 }
